feature(get_session_users): add route and tests (#48)
